iPad desktop styles fix (#63)
* Fix broken layout

* Fix unclosable cookie notice in private mode

* Address Helen's remarks

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -120,8 +120,8 @@
         padding: 5px 15px 7px;
 
         @media (max-width: 1310px) {
-            padding-left: 10px;
-            padding-right: 10px;
+            padding-left: 7px;
+            padding-right: 7px;
         }
 
         &.active {
